.provarCaches/00D410000011HE0EAM/objects/DOX__Template_Field__c.object
<CustomObject>
    <description>Fields that can appear in custom document merges</description>
    <fields>
        <fullName>DOX__Database_Field__c</fullName>
        <label>Database Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Database_Label__c</fullName>
        <label>Database Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Field__c</fullName>
        <label>Document Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Parent__c</fullName>
        <label>Document Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Document_Table_Name__c</fullName>
        <description>The name of the table in the template that this field will populate one column of</description>
        <inlineHelpText>The name of the table in the template that this field will populate one column of</inlineHelpText>
        <label>Document Table Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DOX__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Related_List_Name__c</fullName>
        <description>The name of the related list used to generate data for tables</description>
        <inlineHelpText>The name of the related list used to generate data for tables</inlineHelpText>
        <label>Related List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Related_List_Type__c</fullName>
        <label>Related List Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOX__Sort_Order__c</fullName>
        <description>If specified, this field and order will be applied to the table query</description>
        <inlineHelpText>If specified, this field and order will be applied to the table query</inlineHelpText>
        <label>Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOX__Sort_Sequence__c</fullName>
        <label>Sort Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOX__Template__c</fullName>
        <label>Template</label>
        <referenceTo>DOX__Template__c</referenceTo>
        <relationshipLabel>Template Fields</relationshipLabel>
        <relationshipName>Template_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Template Field</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>DOX__Database_Field__c</columns>
        <columns>DOX__Database_Label__c</columns>
        <columns>DOX__Document_Field__c</columns>
        <columns>DOX__Document_Parent__c</columns>
        <columns>DOX__Document_Table_Name__c</columns>
        <columns>DOX__Field_Type__c</columns>
        <columns>DOX__Filter_Criteria__c</columns>
        <columns>DOX__Parent_Object__c</columns>
        <columns>DOX__Related_List_Name__c</columns>
        <columns>DOX__Related_List_Type__c</columns>
        <columns>DOX__Sort_Order__c</columns>
        <columns>DOX__Sort_Sequence__c</columns>
        <columns>DOX__Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MF-{0000000000}</displayFormat>
        <label>Template Field</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>